--- a/src/Core/Pango.Application/Pango.Application.csproj
+++ b/src/Core/Pango.Application/Pango.Application.csproj
@@ -5,4 +5,7 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 	</PropertyGroup>
+	<ItemGroup>
+	  <PackageReference Include="MediatR" Version="12.1.1" />
+	</ItemGroup>
 </Project>
