--- a/src/Infrastructure/Pango.Infrastructure/Pango.Infrastructure.csproj
+++ b/src/Infrastructure/Pango.Infrastructure/Pango.Infrastructure.csproj
@@ -7,4 +7,12 @@
 		<Nullable>enable</Nullable>
 	</PropertyGroup>
 
+	<ItemGroup>
+	  <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\..\Core\Pango.Application\Pango.Application.csproj" />
+	</ItemGroup>
+
 </Project>
