--- a/src/Core/Pango.Application/Pango.Application.csproj
+++ b/src/Core/Pango.Application/Pango.Application.csproj
@@ -9,6 +9,8 @@
 	  <PackageReference Include="ErrorOr" Version="1.2.1" />
 	  <PackageReference Include="FluentValidation" Version="11.7.1" />
 	  <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.7.1" />
+	  <PackageReference Include="Mapster" Version="7.3.0" />
+	  <PackageReference Include="Mapster.DependencyInjection" Version="1.0.0" />
 	  <PackageReference Include="MediatR" Version="12.1.1" />
 	</ItemGroup>
 </Project>
