--- a/src/Core/Pango.Application/Pango.Application.csproj
+++ b/src/Core/Pango.Application/Pango.Application.csproj
@@ -11,4 +11,7 @@
 	  <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.7.1" />
 	  <PackageReference Include="MediatR" Version="12.1.1" />
 	</ItemGroup>
+	<ItemGroup>
+	  <ProjectReference Include="..\Pango.Domain\Pango.Domain.csproj" />
+	</ItemGroup>
 </Project>
