--- a/src/Infrastructure/Pango.Infrastructure/Pango.Infrastructure.csproj
+++ b/src/Infrastructure/Pango.Infrastructure/Pango.Infrastructure.csproj
@@ -15,4 +15,10 @@
 	  <ProjectReference Include="..\..\Core\Pango.Application\Pango.Application.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Reference Include="Windows.Foundation.UniversalApiContract">
+	    <HintPath>C:\Program Files (x86)\Windows Kits\10\References\10.0.22000.0\Windows.Foundation.UniversalApiContract\14.0.0.0\Windows.Foundation.UniversalApiContract.winmd</HintPath>
+	  </Reference>
+	</ItemGroup>
+
 </Project>
