--- a/src/Infrastructure/Pango.Infrastructure/Pango.Infrastructure.csproj
+++ b/src/Infrastructure/Pango.Infrastructure/Pango.Infrastructure.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
 		<TargetFramework>netstandard2.0</TargetFramework>
@@ -9,10 +9,12 @@
 
 	<ItemGroup>
 	  <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
+	  <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 	</ItemGroup>
 
 	<ItemGroup>
 	  <ProjectReference Include="..\..\Core\Pango.Application\Pango.Application.csproj" />
+	  <ProjectReference Include="..\Pango.Persistence\Pango.Persistence.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
