Fix the path to Windows SDK

--- a/src/Infrastructure/Pango.Persistence/Pango.Persistence.csproj
+++ b/src/Infrastructure/Pango.Persistence/Pango.Persistence.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
 		<TargetFramework>netstandard2.0</TargetFramework>
@@ -13,7 +13,7 @@
 
 	<ItemGroup>
 	  <Reference Include="Windows.Foundation.UniversalApiContract">
-	    <HintPath>C:\Program Files (x86)\Windows Kits\10\References\10.0.22000.0\Windows.Foundation.UniversalApiContract\14.0.0.0\Windows.Foundation.UniversalApiContract.winmd</HintPath>
+	    <HintPath>..\..\..\..\..\..\Windows Kits\10\References\10.0.22000.0\Windows.Foundation.UniversalApiContract\14.0.0.0\Windows.Foundation.UniversalApiContract.winmd</HintPath>
 	  </Reference>
 	</ItemGroup>
 
