Implement the index view of user's passwords

--- a/src/Core/Pango.Application/Pango.Application.csproj
+++ b/src/Core/Pango.Application/Pango.Application.csproj
@@ -16,4 +16,7 @@
 	<ItemGroup>
 	  <ProjectReference Include="..\Pango.Domain\Pango.Domain.csproj" />
 	</ItemGroup>
+	<ItemGroup>
+	  <Folder Include="UseCases\Password\Commands\" />
+	</ItemGroup>
 </Project>
