--- a/src/Infrastructure/Pango.Persistence/Pango.Persistence.csproj
+++ b/src/Infrastructure/Pango.Persistence/Pango.Persistence.csproj
@@ -13,7 +13,7 @@
 
 	<ItemGroup>
 	  <Reference Include="Windows.Foundation.UniversalApiContract">
-	    <HintPath>..\..\..\..\..\..\Windows Kits\10\References\10.0.22000.0\Windows.Foundation.UniversalApiContract\14.0.0.0\Windows.Foundation.UniversalApiContract.winmd</HintPath>
+	    <HintPath>C:\Program Files (x86)\Windows Kits\10\References\10.0.22000.0\Windows.Foundation.UniversalApiContract\14.0.0.0\Windows.Foundation.UniversalApiContract.winmd</HintPath>
 	  </Reference>
 	</ItemGroup>
 
