--- a/src/Infrastructure/Pango.Persistence/Pango.Persistence.csproj
+++ b/src/Infrastructure/Pango.Persistence/Pango.Persistence.csproj
@@ -8,6 +8,10 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.1" />
+	</ItemGroup>
+
+	<ItemGroup>
 	  <ProjectReference Include="..\..\Core\Pango.Application\Pango.Application.csproj" />
 	</ItemGroup>
 
