#9 Initial lock on idle implementation

--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Pango.Desktop.Uwp.csproj
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Pango.Desktop.Uwp.csproj
@@ -162,9 +162,12 @@
     <Compile Include="Core\Localization\StringResourceExtension.cs" />
     <Compile Include="Core\Navigation\NavigationEntry.cs" />
     <Compile Include="Core\Utility\AppDomainProvider.cs" />
+    <Compile Include="Core\Utility\AppIdleHelper.cs" />
+    <Compile Include="Core\Utility\AppIdleService.cs" />
     <Compile Include="Core\Utility\AppLanguageHelper.cs" />
     <Compile Include="Core\Utility\AppThemeHelper.cs" />
     <Compile Include="Core\Utility\AppUserProvider.cs" />
+    <Compile Include="Core\Utility\Contracts\IAppIdleService.cs" />
     <Compile Include="Core\Utility\TitleBarHelper.cs" />
     <Compile Include="DependencyInjection.cs" />
     <Compile Include="Models\AppLanguage.cs" />
